[gd_scene load_steps=12 format=3 uid="uid://cb1njoqliiev"]

[ext_resource type="Script" path="res://Scenes/Levels/Level2/Global2.gd" id="1_vcbqs"]
[ext_resource type="PackedScene" uid="uid://daeg63xk7vl8b" path="res://Scenes/Elements/button.tscn" id="2_28qqt"]
[ext_resource type="TileSet" uid="uid://ccueodkpc20v0" path="res://Scenes/Levels/tileset.tres" id="2_lhkkr"]
[ext_resource type="Script" path="res://Scenes/Elements/button.gd" id="3_6gclh"]
[ext_resource type="PackedScene" uid="uid://b778xkb5j2vy3" path="res://Scenes/People/player.tscn" id="3_65jny"]
[ext_resource type="PackedScene" uid="uid://c4d7hon2iwllk" path="res://Scenes/Elements/box.tscn" id="4_0utic"]
[ext_resource type="PackedScene" uid="uid://ce1xtd52ueli8" path="res://Scenes/Elements/door.tscn" id="5_nov7g"]
[ext_resource type="Texture2D" uid="uid://d1rfeq3l0ihxx" path="res://Assets/redDial.png" id="8_6rtql"]
[ext_resource type="PackedScene" uid="uid://b7imulytklr11" path="res://Scenes/Levels/ca.tscn" id="8_r6a44"]
[ext_resource type="PackedScene" uid="uid://b3kufmbenv510" path="res://Scenes/Elements/RedPickup.tscn" id="9_ukyle"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3f758"]
size = Vector2(45, 290)

[node name="Level2" type="Node2D"]
script = ExtResource("1_vcbqs")

[node name="TileMap" type="TileMap" parent="."]
scale = Vector2(3, 3)
tile_set = ExtResource("2_lhkkr")
format = 2
layer_0/tile_data = PackedInt32Array(65536, 65537, 1, 131072, 65537, 1, 196608, 65537, 1, 262144, 65537, 1, 327680, 65537, 1, 393216, 65537, 1, 458752, 65537, 1, 524288, 65537, 1, 589824, 65537, 1, 655360, 65537, 1, 720896, 65537, 1, 1, 65537, 1, 2, 65537, 1, 3, 65537, 1, 4, 65537, 1, 5, 65537, 1, 6, 65537, 1, 7, 65537, 1, 8, 65537, 1, 9, 65537, 1, 10, 65537, 1, 11, 65537, 1, 12, 65537, 1, 13, 65537, 1, 14, 65537, 1, 15, 65537, 1, 16, 65537, 1, 17, 65537, 1, 18, 65537, 1, 19, 65537, 1, 65555, 196609, 3, 131091, 1, 1, 196627, 1, 2, 458771, 1, 0, 524307, 1, 1, 589843, 1, 1, 655379, 196609, 0, 720915, 65537, 1, 720914, 65537, 1, 720913, 65537, 1, 720912, 65537, 1, 720911, 65537, 1, 720910, 65537, 1, 720909, 65537, 1, 720908, 65537, 1, 720907, 65537, 1, 720906, 65537, 1, 720905, 65537, 1, 720904, 65537, 1, 720903, 65537, 1, 720902, 65537, 1, 720901, 65537, 1, 720900, 65537, 1, 720899, 65537, 1, 720898, 65537, 1, 720897, 65537, 1, 0, 65537, 1, 65537, 65537, 1, 131073, 65537, 1, 196609, 65537, 1, 262145, 65537, 1, 327681, 65537, 1, 393217, 65537, 1, 458753, 65537, 1, 524289, 65537, 1, 589825, 65537, 1, 655361, 65537, 1, 655362, 196609, 2, 655363, 65537, 0, 655364, 65537, 0, 655365, 65537, 0, 655366, 65537, 0, 655367, 65537, 0, 655368, 65537, 0, 655369, 65537, 0, 655370, 65537, 0, 655371, 65537, 0, 655372, 65537, 0, 655373, 65537, 0, 655374, 65537, 0, 655375, 65537, 0, 655376, 65537, 0, 655377, 65537, 0, 655378, 65537, 0, 65539, 65537, 2, 65540, 65537, 2, 65541, 65537, 2, 65542, 65537, 2, 65543, 65537, 2, 65544, 65537, 2, 65545, 65537, 2, 65546, 65537, 2, 65547, 65537, 2, 65548, 65537, 2, 65549, 65537, 2, 65550, 65537, 2, 65551, 65537, 2, 65552, 65537, 2, 65553, 65537, 2, 65554, 65537, 2, 262146, 131073, 1, 327682, 131073, 1, 393218, 131073, 1, 458754, 131073, 1, 589826, 131073, 1, 65538, 196609, 1, 131074, 131073, 1, 524290, 131073, 1, 196610, 131073, 1)

[node name="Button" parent="." instance=ExtResource("2_28qqt")]
position = Vector2(1401, 408)
collision_layer = 5
collision_mask = 5
script = ExtResource("3_6gclh")

[node name="Button2" parent="." instance=ExtResource("2_28qqt")]
position = Vector2(1401, 692)
collision_layer = 5
collision_mask = 5
script = ExtResource("3_6gclh")

[node name="RedPickup" parent="." instance=ExtResource("9_ukyle")]
position = Vector2(1560, 550)

[node name="Player" parent="." instance=ExtResource("3_65jny")]
position = Vector2(920, 544)

[node name="Box" parent="." instance=ExtResource("4_0utic")]
position = Vector2(1141, 316)

[node name="Door" parent="." instance=ExtResource("5_nov7g")]
position = Vector2(1855.4, 528.095)
scale = Vector2(1, 14.4)
requiredAmount = 2

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(1944, 529)
shape = SubResource("RectangleShape2D_3f758")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
visible = false

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
offset_left = 1530.0
offset_right = 1794.0
offset_bottom = 218.0
color = Color(0.803922, 0.803922, 0.803922, 1)

[node name="Red" type="Button" parent="CanvasLayer"]
offset_left = 1589.48
offset_top = 30.0
offset_right = 1735.48
offset_bottom = 176.0
size_flags_horizontal = 4
size_flags_vertical = 4
toggle_mode = true
flat = true

[node name="Dial" type="Sprite2D" parent="CanvasLayer/Red"]
position = Vector2(72.52, 67)
scale = Vector2(4.58, 4.58)
texture = ExtResource("8_6rtql")

[node name="Label" type="Label" parent="CanvasLayer"]
offset_left = 1545.0
offset_top = 175.0
offset_right = 1778.0
offset_bottom = 217.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 28
text = "Press the Dial"
horizontal_alignment = 1

[node name="ca" parent="CanvasLayer" instance=ExtResource("8_r6a44")]
visible = false
mouse_filter = 2

[node name="RedLayer" type="Node2D" parent="."]
visible = false

[node name="Box" parent="RedLayer" instance=ExtResource("4_0utic")]
modulate = Color(1, 0, 0, 1)
position = Vector2(1189, 802)

[connection signal="body_entered" from="Button" to="Button" method="_on_body_entered"]
[connection signal="body_exited" from="Button" to="Button" method="_on_body_exited"]
[connection signal="body_entered" from="Button2" to="Button2" method="_on_body_entered"]
[connection signal="body_exited" from="Button2" to="Button2" method="_on_body_exited"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="toggled" from="CanvasLayer/Red" to="." method="_on_red_toggled"]
